--- a/src/floricultura/entrada_de_produtos.form
+++ b/src/floricultura/entrada_de_produtos.form
@@ -197,6 +197,7 @@
             <StringItem index="2" value="Arbustos"/>
           </StringArray>
         </Property>
+        <Property name="selectedIndex" type="int" value="-1"/>
       </Properties>
       <AuxValues>
         <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
