--- a/src/floricultura/TelaInicial/TelaInicial.form
+++ b/src/floricultura/TelaInicial/TelaInicial.form
@@ -215,6 +215,7 @@
               <Component id="Principal" alignment="1" max="32767" attributes="0"/>
               <Component id="Titulo" alignment="0" max="32767" attributes="0"/>
               <Component id="Separator" alignment="0" max="32767" attributes="0"/>
+              <Component id="ConsultarVendas" alignment="0" max="32767" attributes="0"/>
           </Group>
         </DimensionLayout>
         <DimensionLayout dim="1">
@@ -230,6 +231,8 @@
                   <Component id="Principal" min="-2" pref="42" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
                   <Component id="RealizarVendaRapida" min="-2" pref="42" max="-2" attributes="0"/>
+                  <EmptySpace max="-2" attributes="0"/>
+                  <Component id="ConsultarVendas" min="-2" pref="43" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
                   <Component id="CadastroRapido" min="-2" pref="42" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
@@ -268,7 +271,7 @@
               <Color blue="ff" green="ff" red="ff" type="rgb"/>
             </Property>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/floricultura/TelaInicial/imagens/Cash.png"/>
+              <Image iconType="3" name="/Imagens/Cash.png"/>
             </Property>
             <Property name="text" type="java.lang.String" value="Realizar Venda"/>
             <Property name="borderPainted" type="boolean" value="false"/>
@@ -292,7 +295,7 @@
               <Color blue="ff" green="ff" red="ff" type="rgb"/>
             </Property>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/floricultura/TelaInicial/imagens/Edit.png"/>
+              <Image iconType="3" name="/Imagens/Edit_1.png"/>
             </Property>
             <Property name="text" type="java.lang.String" value="Cadastrar Cliente"/>
             <Property name="borderPainted" type="boolean" value="false"/>
@@ -316,7 +319,7 @@
               <Color blue="ff" green="ff" red="ff" type="rgb"/>
             </Property>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/floricultura/TelaInicial/imagens/Person_1.png"/>
+              <Image iconType="3" name="/Imagens/Person_1.png"/>
             </Property>
             <Property name="text" type="java.lang.String" value="Consultar Cliente"/>
             <Property name="borderPainted" type="boolean" value="false"/>
@@ -340,7 +343,7 @@
               <Color blue="ff" green="ff" red="ff" type="rgb"/>
             </Property>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/floricultura/TelaInicial/imagens/Box_1.png"/>
+              <Image iconType="3" name="/Imagens/Box_1.png"/>
             </Property>
             <Property name="text" type="java.lang.String" value="Cadastrar Produtos"/>
             <Property name="borderPainted" type="boolean" value="false"/>
@@ -364,7 +367,7 @@
               <Color blue="ff" green="ff" red="ff" type="rgb"/>
             </Property>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/floricultura/TelaInicial/imagens/Task.png"/>
+              <Image iconType="3" name="/Imagens/Task.png"/>
             </Property>
             <Property name="text" type="java.lang.String" value="Consultar Produtos"/>
             <Property name="borderPainted" type="boolean" value="false"/>
@@ -385,7 +388,7 @@
               <Color blue="ff" green="ff" red="ff" type="rgb"/>
             </Property>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/floricultura/TelaInicial/imagens/Smart Home Shield.png"/>
+              <Image iconType="3" name="/Imagens/Smart Home Shield.png"/>
             </Property>
             <Property name="text" type="java.lang.String" value="Home"/>
             <Property name="borderPainted" type="boolean" value="false"/>
@@ -421,6 +424,27 @@
             <Property name="horizontalAlignment" type="int" value="0"/>
             <Property name="text" type="java.lang.String" value="Casa da Planta"/>
             <Property name="horizontalTextPosition" type="int" value="0"/>
+          </Properties>
+        </Component>
+        <Component class="javax.swing.JButton" name="ConsultarVendas">
+          <Properties>
+            <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+              <Color blue="60" green="56" red="ef" type="rgb"/>
+            </Property>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Segoe UI" size="14" style="0"/>
+            </Property>
+            <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+              <Color blue="ff" green="ff" red="ff" type="rgb"/>
+            </Property>
+            <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+              <Image iconType="3" name="/Imagens/Task.png"/>
+            </Property>
+            <Property name="text" type="java.lang.String" value="Consultar Vendas"/>
+            <Property name="borderPainted" type="boolean" value="false"/>
+            <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
+              <Color id="Hand Cursor"/>
+            </Property>
           </Properties>
         </Component>
       </SubComponents>
